src/test/ui/issues/10000-19999/issue-18118.stderr
error[E0597]: `p` does not live long enough
  --> $DIR/issue-18118.rs:4:9
   |
LL |         &p
   |         ^^
   |         |
   |         borrowed value does not live long enough
   |         using this value as a constant requires that `p` is borrowed for `'static`
LL |     };
   |     - `p` dropped here while still borrowed

error: aborting due to previous error

For more information about this error, try `rustc --explain E0597`.
